--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,13 @@ code {
     margin-left: 20px;
 }
 
+button {
+    cursor: pointer;
+}
+button:hover {
+    background-color: #379782;
+}
+
 /*couleur des icones menu*/
 .couleur-verte{
     color: #33a284;
